[package]
name = "oakland"
version = "0.1.0"
description="An experimental GUI library for X-Windows"
authors = ["Charles Samuels <ks@ks.ax>"]
edition="2018"
keywords=["gui"]

[dependencies]
xcb =  {version="*", features=["render"] }
xcb-util =  {version="*", features=["icccm"] }
cairo = {path="../rust-cairo"}
libc = "*"
nix = "*"
antidote = "*"
image="*"
